Bug 98399 - Changes Occur When Canceled
Summary: Changes Occur When Canceled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0 target:5.1.2 target:5.0.6
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-04 04:02 UTC by gat
Modified: 2016-10-25 19:08 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gat 2016-03-04 04:02:28 UTC
Description of problem:
Changes to images still occur when canceled in at least one scenario.

Version-Release number of selected component (if applicable):
Build ID 5.0.5.2-2.fc23 in LibreOffice Writer

How reproducible:
Consistent

Steps to Reproduce:
Right-click on an image. Select "Format Image...". Select "Crop". Change the image by adding to the width or clicking "Original Size". Click any other tab, e.g. "Borders". Click "Cancel". Watch for the changes to happen that were supposed to have been canceled.

Actual results:
The image changes according to the retained edits of cropping.

Expected results:
The canceled edits would not be applied.

Additional info:
I will report upstream once someone confirms that this is an upstream bug.

I have confirmed the same functionality on OS X (El Capitan 10.11.3) with LibreOffice 5.1.0.3 (Build ID: 5e3e00a007d9b3b6efb6797a8b8e57b51ab1f737).

Since I have confirmed this on the latest version and on two different operating systems, then I believe that it is a bug in LibreOffice.
Comment 1 gat 2016-03-04 04:16:44 UTC
I have confirmed this issue on LibreOffice 4.3.0.4 with Windows Vista Service Pack 2. Also, the following still produces the bug.

Right-click an image. Click "Format Image". Click "Crop" Change the image's size. Click another tab, e.g. "Image". Click "Crop" to return. Click "Reset". Click "Cancel". The values will still be reset, but the changes will still occur.
Comment 2 Commit Notification 2016-03-04 17:02:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd9a5cf4312a2dc0c1ecbf682c67ca08862cdde0

Resolves: tdf#98399 RET_USER_CANCEL is non-zero and returned on cancel

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2016-03-07 12:38:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e013830e996cb571b0f4acebd2776ca3193b663b&h=libreoffice-5-1

Resolves: tdf#98399 RET_USER_CANCEL is non-zero and returned on cancel

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-03-07 12:38:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=40e7a2253a72ee490f97a604bcc94d12d0b84fc8&h=libreoffice-5-0

Resolves: tdf#98399 RET_USER_CANCEL is non-zero and returned on cancel

It will be available in 5.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 gat 2016-03-19 02:25:26 UTC
I have tested your fix in the latest stable release in Fedora 23 and the issue has been resolved.