Resolves: tdf#98399 RET_USER_CANCEL is non-zero and returned on cancel

Change-Id: Id4231454dfb34cac6ee89d63beb18a83c63a44c1
(cherry picked from commit cd9a5cf4312a2dc0c1ecbf682c67ca08862cdde0)